--- a/requirements.txt
+++ b/requirements.txt
@@ -33,3 +33,17 @@ lxml>=4.9.0
 
 # 시스템 모니터링 (v1.4 추가)
 psutil>=5.9.0
+
+# Excel/HWP 지원 (v2.0)
+openpyxl>=3.1.0
+olefile>=0.46
+
+# OCR 지원 (v2.0)
+pytesseract>=0.3.10
+Pillow>=9.0.0
+pdf2image>=1.16.0
+
+# 폴더 모니터링 (v2.0)
+watchdog>=3.0.0
+
+# 문서 비교 (내장 difflib 사용)
