--- a/requirements.txt
+++ b/requirements.txt
@@ -1,54 +1,79 @@
-# 사내 규정 검색기 웹 서버 - Python 3.14 호환 패키지
-# 주의: Python 3.14에서는 Pydantic V2가 필수입니다
+# 사내 규정 검색기 - Python 3.10+ / 3.14 호환 패키지
+# 2026-01-08 업데이트
+
+# ============================================================================
+# 핵심 의존성
+# ============================================================================
 
 # Flask 웹 프레임워크
 flask>=2.3.0
 flask-cors>=4.0.0
 
-# 프로덕션 서버 (권장)
+# 프로덕션 WSGI 서버
 waitress>=2.1.0
 
-# GUI (시스템 트레이)
+# GUI (시스템 트레이) - 선택적
 PyQt6>=6.4.0
 
-# Pydantic V2 (Python 3.14 필수)
-pydantic>=2.12.0
+# ============================================================================
+# AI/ML (하이브리드 검색 기능)
+# ============================================================================
 
-# AI/ML - Python 3.14 호환 버전
+# PyTorch - CPU 버전 권장 (경량화)
 torch>=2.5.0
+
+# LangChain 생태계
 langchain>=0.3.0
 langchain-core>=0.3.0
 langchain-text-splitters>=0.3.0
 langchain-huggingface>=0.1.0
 langchain-community>=0.3.0
+
+# 벡터 검색
 faiss-cpu>=1.9.0
 sentence-transformers>=3.0.0
 
-# 문서 처리
-python-docx>=0.8.11
-pypdf>=3.0.0
-
-# 유틸리티 - Python 3.14 호환 버전
+# Transformers
 transformers>=4.46.0
 huggingface-hub>=0.26.0
 
-# 문서 처리 의존성
+# ============================================================================
+# 문서 처리
+# ============================================================================
+
+# 기본 문서
+python-docx>=0.8.11
+pypdf>=3.0.0
 lxml>=4.9.0
 
-# 시스템 모니터링
-psutil>=5.9.0
-
-# Excel/HWP 지원
+# Excel 지원
 openpyxl>=3.1.0
+
+# HWP 지원
 olefile>=0.46
 
-# OCR 지원
-pytesseract>=0.3.10
-Pillow>=9.0.0
-pdf2image>=1.16.0
+# ============================================================================
+# OCR 지원 (선택적)
+# ============================================================================
 
-# 폴더 모니터링
-watchdog>=3.0.0
+# 주의: Tesseract는 별도 설치 필요
+# pytesseract>=0.3.10
+# Pillow>=9.0.0
+# pdf2image>=1.16.0
 
-# NumPy (Python 3.14 호환)
+# ============================================================================
+# 시스템 유틸리티
+# ============================================================================
+
+psutil>=5.9.0
+
+# Python 3.14 호환
+pydantic>=2.12.0
 numpy>=2.0.0
+
+# ============================================================================
+# 개발 도구 (선택적)
+# ============================================================================
+
+# pytest>=7.0.0
+# watchdog>=3.0.0
